--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -23,6 +23,14 @@ body {
 	background-color: var(--color-bg);
 	max-width: 100vw;
 	overflow-x: clip;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+/* Touch-friendly sizes */
+button, a, input, textarea {
+	min-height: 44px;
+	min-width: 44px;
 }
 
 img {
