--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,6 +1,4 @@
-/* --------------------------------------------------------------------------
-   Custom Fonts
-   -------------------------------------------------------------------------- */
+/* Fuente principal del proyecto */
 
 @font-face {
     font-family: "BBH Sans Bartle";
