--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -1,6 +1,4 @@
-/* --------------------------------------------------------------------------
-   Modal System for Projects - Mobile First
-   -------------------------------------------------------------------------- */
+/* Estilos para el sistema de modales de proyectos */
 
 .modal-overlay {
 	position: fixed;
